# AI_EXE_DEV_RUNNERS

./: README.md
CMAKE_LSTM/: CMakeCache.txt  CMakeLists.txt  FindOpenCL.cmake  Makefile  app  cmake_install.cmake  main.cc
CPU_CONV/: CMakeCache.txt  CMakeLists.txt  Makefile  app  cmake_install.cmake  code  main.cc  read.cc  read.hh
CPU_CONV/model/: model.cc  model.hh
GPU_CONV_SIMPLE_NEURON_MODEL/: AI_EXE_CMAKE_CONV_RUNNER_CL  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  main.cc  other  read.cc  read.hh  test.sh
GPU_CONV_SIMPLE_NEURON_MODEL/model/: model.cc  model.hh
